# yield-curve-pca

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  yield_curve_pca_spec.md
.github/workflows/: test.yml
data/processed/: backtest_combined.parquet  backtest_pc2_meanrev.parquet  backtest_sensitivity_pnl.parquet  backtest_sensitivity_sharpe.parquet  daily_regime.parquet  human_indicators_changes_bp.parquet  human_indicators_levels.parquet  immunization_phase1_exposures.parquet  immunization_phase1_pnl.parquet  immunization_phase2_pnl.parquet  immunization_phase2_variance_reduction.parquet  macro_features.parquet  macro_regression_summary.parquet  macro_surprises.parquet  pc_vs_human_correlations.parquet  pca_explained_variance.parquet  pca_loadings.parquet  pca_model.joblib  pca_scores.parquet  slopes.parquet  strategy_comparison.parquet  ust_yields_changes_bp.parquet  ust_yields_clean.parquet  walk_forward_hedge_history.parquet  walk_forward_pnl.parquet  walk_forward_sensitivity.parquet
docs/: glossary.md
notebooks/: 01_data_exploration.ipynb  02_curve_dynamics.ipynb  03_pca_basics.ipynb  04_pca_interpretation.ipynb  05_event_study.ipynb  06_pc2_mean_reversion.ipynb  07_loss_analysis_and_improvements.ipynb  08_strategy_ceiling_and_walkthrough.ipynb  09_macro_factor_regression.ipynb  10_pca_immunization.ipynb  11_immunization_backtest.ipynb  12_walk_forward_immunization.ipynb
reports/: findings.md
src/yield_curve_pca/: __init__.py
src/yield_curve_pca/analysis/: __init__.py  backtest.py  immunization.py  pca_analyzer.py
src/yield_curve_pca/data/: __init__.py  loader.py  preprocessor.py
src/yield_curve_pca/utils/: __init__.py  config.py
src/yield_curve_pca/visualization/: __init__.py
tests/: conftest.py  test_backtest.py  test_immunization.py  test_loader.py  test_pca_analyzer.py  test_preprocessor.py
