[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yield-curve-pca"
version = "0.1.0"
description = "US Treasury yield curve PCA analysis — Level / Slope / Curvature decomposition"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Yield Curve PCA contributors" },
]
keywords = ["fixed-income", "pca", "yield-curve", "treasury", "fred", "fictional", "ficc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyterlab>=4.0",
    "pyarrow>=14.0",
    "statsmodels>=0.14",
    "joblib>=1.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yield_curve_pca"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
